routing and separate html files

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,27 +1,4 @@
 <div class="container">
-  <div class="row">
-    <div class="col px-5 py-3">
-      <form>
-        <div class="form-group mx-auto px-5">
-          <label for="exampleFormControlTextarea1">API Endpoint</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <div class="form-group mx-auto px-5">
-          <label for="exampleFormControlTextarea2">Authentication Headers</label>
-          <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
-        </div>
-        <div class="form-group mx-auto px-5">
-          <label for="exampleFormControlTextarea3">Parameters</label>
-          <textarea class="form-control" id="exampleFormControlTextarea3" rows="3"></textarea>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col text-center">
-              <button class="btn btn-primary">Test API</button>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
+  <app-nav></app-nav>
+  <router-outlet></router-outlet>
 </div>
