--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,17 +1,37 @@
-<body class="text-center">
+<div class="jumbotron d-flex h-100 p-3 mx-auto flex-column">
 
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <div class="container d-flex h-100 p-3 mx-auto flex-column">
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
+        <h1 class="display-3">API Bookie</h1>
+        <h5 class="lead">API Monitoring for Humans</h5>
       </main>
+    </div>
 
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
-      </footer>
+    <div class="card text-white bg-primary mb-3">
+      <div class="card-header">WHY</div>
+      <div class="card-body">
+        <p>We all see an API and think, "Hey, I'd like to use that for (insert awesome idea here)." The only issue is that means we need to write the code for do the API monitoring, host a infrastructure to continurously run the code on, and maintain it. And, well, that just doesn't happen 90% of the time. That's where API Bookie comes in.</p>
+      </div>
+    </div>
+
+    <div class="card text-white bg-primary mb-3">
+      <div class="card-header">HOW</div>
+      <div class="card-body">
+        <ul class="list-group">
+          <li class="list-group-item">Input your API Endoint to Monitor</li>
+          <li class="list-group-item">Setup your Authentication</li>
+          <li class="list-group-item">Create the logic to use to montior the API Endpoint</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="card text-white bg-primary mb-3">
+      <div class="card-header">USE CASES</div>
+      <div class="card-body">
+        <ul class="list-group">
+          <li class="list-group-item">Monitoring the BitCoin API for specific price points.</li>
+          <li class="list-group-item">Monitoring your Enterprise SaaS Apps for outages.</li>
+          <li class="list-group-item">Monitoring the a Weather API to be notified when it's going to rain.</li>
+        </ul>
+      </div>
     </div>
