API Setup / Display Success - API Call Service - Component that pulls all values in the apicall table from the database

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -45,13 +45,5 @@
 
     </div>
   </div>
-  <div style="text-align:center">
-      <h1>API Calls</h1>
-    </div>
-    <h2>Here are the Api Calls created so far: </h2>
-    <ul>
-      <li *ngFor="let apicall of apiCallList">
-        {{apicall.name}}
-      </li>
-    </ul>
-</div> 
+  <app-apicall></app-apicall>
+</div>
