Figured out error with displaying the headers.

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -24,7 +24,7 @@
         <div class="form-group mx-auto px-5">
           <label for="authHeaders">Authentication Headers</label>
           <textarea class="form-control" id="authHeaders" rows="1" aria-describedby="authHeadersHelp" (keyup)="updateHeaders($event)"></textarea>
-          <!-- <small id="authHeadersHelp" class="form-text text-muted">The Authentication Headers are what we use in the request to Authenticate to the API. You can use these for testing: {"X-RapidAPI-Host": "community-bitcointy.p.rapidapi.com", "X-RapidAPI-Key": "957f841dc2mshd1045a90ddd01acp1de9e8jsn99cfc0c07a06"}</small> -->
+          <small id="authHeadersHelp" class="form-text text-muted">The Authentication Headers are what we use in the request to Authenticate to the API. You can use these for testing: &#123;&quot;X-RapidAPI-Host&quot;: &quot;community-bitcointy.p.rapidapi.com&quot;, &quot;X-RapidAPI-Key&quot;: &quot;957f841dc2mshd1045a90ddd01acp1de9e8jsn99cfc0c07a06&quot;&#125; </small>
         </div>
 
         <div class="form-group mx-auto px-5">
